// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Slider Custom Colors 1`] = `
.c0 {
  background: linear-gradient( to right,#00D200 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
}

.c1 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #00D200;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c2:focus {
  border: 4px solid hsl(120,100%,37.1%);
  background: hsl(120,100%,37.1%);
  border-radius: 50%;
}

.c2:active {
  background: hsl(120,100%,37.1%);
  height: 25px;
  width: 25px;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(to right, #00D200 50% , #EBEBE8 50%)",
      }
    }
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={50}
      className="c2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchStart={[Function]}
      role="slider"
      style={
        Object {
          "left": "calc(50% - 15px)",
        }
      }
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`Storyshots Molecules | Slider Default 1`] = `
Array [
  .c0 {
  background: linear-gradient( to right,#AC135A 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
}

.c1 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #AC135A;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c2:focus {
  border: 4px solid hsl(332.20000000000005,80.1%,33.7%);
  background: hsl(332.20000000000005,80.1%,33.7%);
  border-radius: 50%;
}

.c2:active {
  background: hsl(332.20000000000005,80.1%,33.7%);
  height: 25px;
  width: 25px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      style={
        Object {
          "background": "linear-gradient(to right, #AC135A 50% , #EBEBE8 50%)",
        }
      }
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c2"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 15px)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Default Color 1`] = `
Array [
  .c0 {
  background: linear-gradient( to right,#0046FF 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
}

.c1 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #0046FF;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c2:focus {
  border-radius: 50%;
}

.c2:active {
  height: 25px;
  width: 25px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      style={
        Object {
          "background": "linear-gradient(to right, #0046FF 50% , #EBEBE8 50%)",
        }
      }
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c2"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 15px)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Disabled 1`] = `
Array [
  .c0 {
  background: linear-gradient( to right,#0046FF 0% 50%,#EBEBE8 50% 100% );
  background: #EBEBE8;
  height: 12px;
  max-width: 100%;
  width: 100%;
}

.c1 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #0046FF;
  border: 4px solid #EBEBE8;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c2:focus {
  border-radius: 50%;
}

.c2:active {
  height: 25px;
  width: 25px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      style={
        Object {
          "background": "#EBEBE8",
        }
      }
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c2"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 15px)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Maximum Value 1`] = `
Array [
  .c0 {
  background: linear-gradient( to right,#3A913F 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
}

.c1 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #3A913F;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c2:focus {
  border: 4px solid hsl(123.39999999999998,42.9%,35.8%);
  background: hsl(123.39999999999998,42.9%,35.8%);
  border-radius: 50%;
}

.c2:active {
  background: hsl(123.39999999999998,42.9%,35.8%);
  height: 25px;
  width: 25px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      style={
        Object {
          "background": "linear-gradient(to right, #3A913F 100% , #EBEBE8 100%)",
        }
      }
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={100}
        className="c2"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(100% - 15px)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    100
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Minimum Value 1`] = `
Array [
  .c0 {
  background: linear-gradient( to right,#009195 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
}

.c1 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #009195;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c2:focus {
  border: 4px solid hsl(181.60000000000002,100%,26.3%);
  background: hsl(181.60000000000002,100%,26.3%);
  border-radius: 50%;
}

.c2:active {
  background: hsl(181.60000000000002,100%,26.3%);
  height: 25px;
  width: 25px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      style={
        Object {
          "background": "linear-gradient(to right, #009195 0% , #EBEBE8 0%)",
        }
      }
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="c2"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(0% - 15px)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    0
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Negative To Positive 1`] = `
Array [
  .c0 {
  background: linear-gradient( to right,#FF1900 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
}

.c1 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #FF1900;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c2:focus {
  border: 4px solid hsl(5.899999999999977,100%,45%);
  background: hsl(5.899999999999977,100%,45%);
  border-radius: 50%;
}

.c2:active {
  background: hsl(5.899999999999977,100%,45%);
  height: 25px;
  width: 25px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      style={
        Object {
          "background": "linear-gradient(to right, #FF1900 50% , #EBEBE8 50%)",
        }
      }
    >
      <div
        aria-valuemax={50}
        aria-valuemin={-50}
        aria-valuenow={0}
        className="c2"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 15px)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    0
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Small Variant 1`] = `
Array [
  .c0 {
  background: linear-gradient( to right,#FF2B83 0% 50%,#EBEBE8 50% 100% );
  height: 4px;
  max-width: 100%;
  width: 100%;
}

.c1 {
  max-width: 100%;
  height: 4px;
  position: relative;
  width: calc( 100% - 20px );
  margin: 0 auto;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 20px;
  height: 20px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #FF2B83;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c2:focus {
  border: 4px solid hsl(335.1,100%,52.6%);
  background: hsl(335.1,100%,52.6%);
  border-radius: 50%;
}

.c2:active {
  background: hsl(335.1,100%,52.6%);
  height: 16px;
  width: 16px;
}

<div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      style={
        Object {
          "background": "linear-gradient(to right, #FF2B83 50% , #EBEBE8 50%)",
        }
      }
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c2"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 10px)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;
